<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>co.elastic.apm</groupId>
        <artifactId>apm-spring-webflux</artifactId>
        <version>1.56.1-SNAPSHOT</version>
    </parent>

    <artifactId>apm-spring-webflux-testapp-spring7</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>

    <properties>
        <!-- for licence header plugin -->
        <apm-agent-parent.base.dir>${project.basedir}/../../..</apm-agent-parent.base.dir>

        <!-- this module is a test dependency, thus use same java version as tests -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- disable signature check as it's a test application -->
        <animal.sniffer.skip>true</animal.sniffer.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- using spring bom dependency to resolve dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring-boot-4}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>apm-agent-core</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
            <exclusions>
                <!-- exclude logback as it conflicts with slf4j-simple provided by agent core -->
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
                <!-- exclude slf4j implementation as it conflicts with the one provide by agent core -->
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-to-slf4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- include tomcat server in classpath to allow testing with servlets -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- required otherwise we only have it in test scope, and makes map<>json conversion fail -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <!-- explicit version required as bom will not cover plugins, only dependencies -->
                <version>4.1.0</version>
                <configuration>
                    <mainClass>co.elastic.apm.agent.springwebflux.testapp.WebFluxApplication</mainClass>
                    <!-- by default original jar is replaced, which makes impossible to reuse as dependency -->
                    <classifier>standalone</classifier>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
